# RASTROS-LI2-

./: Azul  Bot  Doxyfile  Exemplo1  Exemplo2  Jogo  README.md  bot.c  bot.h  dados.c  dados.h  interface.c  interface.h  lista.c  lista.h  lista.h.gch  logica.c  logica.h  main  main.c  mostra_jogadas.h  mostra_jogadores.c  tab_(comJOGAR).c  tabuleiro_.c  teste_sf
Bot/: Bot  BotGoncalo  BotInteligente  BotMax  BotTeste  CMakeCache.txt  CMakeLists.txt  Exemplo2  Jogadafeita  Makefile  bot.c  bot.h  cmake_install.cmake  dados.h  interface.c  interface.h  lista.c  lista.h  logica.c  logica.h
Doc/: Bot_2CMakeFiles_23_810_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.xml  Bot_2CMakeFiles_23_810_82_2CompilerIdC_2CMakeCCompilerId_8c.xml  Bot_2CMakeFiles_2feature__tests_8c.xml  Bot_2CMakeFiles_2feature__tests_8cxx.xml  Bot_2dados_8c.xml  Bot_2dados_8h.xml  Bot_2interface_8c.xml  Bot_2interface_8h.xml  Bot_2logica_8c.xml  Bot_2logica_8h.xml  Projeto_2CMakeFiles_23_810_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.xml  Projeto_2CMakeFiles_23_810_82_2CompilerIdC_2CMakeCCompilerId_8c.xml  Projeto_2CMakeFiles_2feature__tests_8c.xml  Projeto_2CMakeFiles_2feature__tests_8cxx.xml  Projeto_2dados_8c.xml  Projeto_2dados_8h.xml  Projeto_2interface_8c.xml  Projeto_2interface_8h.xml  Projeto_2logica_8c.xml  Projeto_2logica_8h.xml  bot_8c.xml  bot_8h.xml  dir_0536670d1fa3a65273137b579df70e24.xml  index.xml  (+16 more)
Projeto/: CMakeCache.txt  CMakeLists.txt  Exemplo3  Jogo  Makefile  a.out  cmake_install.cmake  dados.c  dados.h  interface.c  interface.h  lista.c  lista.h  logica.c  logica.h  main.c
(+110 files in other folders)
